--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 .header {
-    background: lightblue;
+    background: gray;
     display: flex;
     justify-content: center;
     padding: 1.25rem 0;
-    color: midnightblue;
+    color: black;
     font-size: large;
     font-weight: 700;
   }
